syntax = "proto3";
package grpc;

message DataMessage {
    string type_ = 1;
    string value = 2;
}
message StatusMessage {
    bool status = 1;
}

service DataExchange {
    rpc SendData(DataMessage) returns (StatusMessage) {}
}
